[workspace]
resolver = "3"
members = ["module-01-intro", "module-02-routing", "module-03-extractors"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
