[package]
name = "module-08-database"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
sqlx.workspace = true
chrono.workspace = true
dotenvy.workspace = true
